static/css/styles.css
body {
max-width: 100%;
overflow-x: hidden;
padding: 30px;
}

img{
  /* display:flex;
  justify-content: space-around; */
  max-width: 200px;
}

.grid {
  display: grid;
  grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
  grid-gap: 30px;
  align-items: center;
}

.grid .user-details {
  display: grid;
  grid-template-columns: 2fr 2fr 2fr 2fr;
  grid-gap: 35px;
  align-items: center;
}

#header{
  padding: 30px;
}


/* .overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #008CBA;
}

.container:hover .overlay {
  opacity: 1;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center; */
/*  */

/* .wrapper {
  padding: 0 30px;
  margin: 0 auto;
  max-width: 1180px;
} */

/* .row {
  display: flex;
}

.column {
  flex: 33.33%;
  padding: 5px;
}
.gallery{
  width: 10px;
  padding: 50px 0;
} */

.navbar {
  background: none;
}



.homepage {
  background: url("/static/img/pokemon_bg.png") no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
 


 
/* .flex-container {
  display: flex;
} */


/* /* .flex-container{
  display:grid;
  height:100px;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: .02fr 1.5fr 1.2fr 0.8fr;
} */

/* .flex-container{
  height: 300px;
  width: 300px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
} */ 

/* .flex-container > * {
  flex-basis: 50%
} */

/* .flex-container {
  /* display: flex;
  flex-wrap: wrap; */
  /* height:100px;
  width:100px;
} */ 

/* .photo {
  max-width: 31.333%;
  padding: 0 10px;
  height: 240px;
} */

/* .photo img {
  width: 100%;
  height: 100%;
} */

/* 
.image-grid {
  --gap: 16px;
  --num-cols: 4;
  --row-height: 400px;


  box-sizing: border-box;
  padding: var(--gap);


  display: grid;
  grid-template-columns: repeat(var(--num-cols));
  grid-auto-rows: var(--row-height);
  gap:var(--gap);
}

image-grid > img {
  width: 100%;
  height: 100%;
  object-fit: fit;
}

@media screen and (max-width: 1024px) {
  .image-grid {
    --num-cols: 2;
    --row-height: 200px;
  } */

